src/test/ui/issues/issue-37366.stderr
error: compilation successful
  --> $DIR/issue-37366.rs:15:1
   |
LL | / fn main() { //~ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

